# c3

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: release.yml  strength-test.yml  test.yml
include/c3/: about.hpp  attacks.hpp  bitboard.hpp  board.hpp  castling.hpp  colour.hpp  engine.hpp  eval.hpp  magic.hpp  move.hpp  movegen.hpp  piece.hpp  position.hpp  rng.hpp  search.hpp  square.hpp  tablebase.hpp  uci.hpp  zobrist.hpp
scripts/: common.py  compare_branches.py  perft_benchmark.py  run_fastchess_gauntlet.py
src/: about.cpp  engine.cpp  eval.cpp  fen.cpp  magic_bitboard_generator.cpp  main.cpp  movegen.cpp  position.cpp  search.cpp  tablebase.cpp  uci.cpp
tests/: CMakeLists.txt  about_test.cpp  board_test.cpp  castling_test.cpp  engine_test.cpp  eval_test.cpp  fen_test.cpp  fixtures.cpp  fixtures.hpp  fixtures_test.cpp  integration_test.cpp  magic_test.cpp  movegen_test.cpp  position_test.cpp  primitives_test.cpp  rng_test.cpp  search_test.cpp  tablebase_test.cpp  threads_test.cpp  uci_test.cpp  zobrist_test.cpp
tests/fixtures/: eval.txt  fastchess_sample.pgn  magic.txt  openings.epd  perft.txt  zobrist.txt
